/*
 * lucene_continuation.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2021-2022 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package com.apple.foundationdb.record.lucene;

option java_outer_classname = "LuceneContinuationProto";

message LuceneIndexContinuation {
    required uint64 doc = 1;
    required float score = 2;
    optional uint64 shard = 3;
}

message LuceneAutoCompleteIndexContinuation {
    required string key = 1;
    required uint64 value = 2;
    optional bytes payload = 3;
}

message LuceneSpellCheckIndexContinuation {
    required uint64 location = 1;
    required bytes value = 2;
}
